# magic_get

include/boost/pfr/detail/: fields_count.hpp
test_msvc/: CMakeLists.txt  printstruct.py  test_main.cpp  test_pfr.cpp
